# sonic-sairedis

saidiscovery/: Makefile.am
saisdkdump/: Makefile.am
syncd/: Makefile.am
syncd/scripts/: syncd_init_common.sh
